test/fails/bad_tags/decl1.lgl
void main() {
    tag a is b; // Undeclared b
}